--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ag-grid-community": "^33.2.4",
+    "ag-grid-react": "^33.2.4",
     "animate.css": "^4.1.1",
+    "axios": "^1.9.0",
     "react": "^19.0.0",
+    "react-data-table-component": "^7.7.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0"
   },
