--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,6 +26,10 @@ jobs:
       - name: Set up QEMU (for cross-build)
         uses: docker/setup-qemu-action@v2
 
+      # (4) GHCR 로그인 (GITHUB_TOKEN 사용)
+      - name: Login to GHCR
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
+
       # (3) Docker Buildx 설정 (멀티 플랫폼 빌드를 위해 필요)
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -33,16 +37,11 @@ jobs:
           driver-opts: network=host  # 네트워크 이슈 방지 (e.g., timeout)
           use: true
 
-      # (4) GHCR 로그인 (PAT 사용)
-      - name: Login to GHCR
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
-
       # (5) Docker 이미지 빌드 및 푸시 (linux/amd64 + linux/arm64), latest 태그 포함
       - name: Build and Push Multi-Arch Image (amd64 + arm64)
         run: |
           docker buildx build \
             --platform linux/amd64,linux/arm64 \
-            --build-arg YARN_TIMEOUT=60000 \
             -f docker/Dockerfile \
             -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.VERSION }} \
             -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest \
