--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ag-grid-react": "^33.2.4",
     "animate.css": "^4.1.1",
     "axios": "^1.9.0",
+    "exceljs": "^4.4.0",
     "react": "^19.0.0",
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.0.0",
