--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0",
+    "recharts": "^2.15.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
