--- a/package.json
+++ b/package.json
@@ -10,11 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lexical/code": "^0.20.0",
+    "@lexical/html": "^0.20.0",
+    "@lexical/link": "^0.20.0",
+    "@lexical/list": "^0.20.0",
+    "@lexical/markdown": "^0.20.0",
+    "@lexical/react": "^0.20.0",
+    "@lexical/rich-text": "^0.20.0",
+    "@lexical/utils": "^0.20.0",
     "ag-grid-community": "^33.2.4",
     "ag-grid-react": "^33.2.4",
     "animate.css": "^4.1.1",
     "axios": "^1.9.0",
     "exceljs": "^4.4.0",
+    "lexical": "^0.20.0",
+    "lucide-react": "^0.460.0",
+    "prismjs": "^1.30.0",
+    "re-resizable": "^6.10.3",
     "react": "^19.0.0",
     "react-data-table-component": "^7.7.0",
     "react-dom": "^19.0.0",
