--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,11 +26,18 @@ jobs:
       - name: Set up QEMU (for cross-build)
         uses: docker/setup-qemu-action@v2
 
-      # (4) GHCR 로그인 (GITHUB_TOKEN 사용)
+      # (3) GHCR 로그인 (GITHUB_TOKEN 사용)
       - name: Login to GHCR
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.repository_owner }}" --password-stdin
 
-      # (3) Docker Buildx 설정 (멀티 플랫폼 빌드를 위해 필요)
+      # (3) 불필요한 캐시 정리
+      - name: Free disk space
+        run: |
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+
+      # (4) Docker Buildx 설정 (멀티 플랫폼 빌드를 위해 필요)
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         with:
